--- a/.github/workflows/build-tvbox.yml
+++ b/.github/workflows/build-tvbox.yml
@@ -143,6 +143,13 @@ jobs:
       #      git log --pretty=format:%B ${{ env.commitS }}...${lastCommit:0:7} |sed -e "s# \{2,\}#\n#g" -e "/^Merge \(pull\|branch\|remote\)/d" -e '/^$/d' |cat -n |sort -k2,2 -k1,1n |uniq -f1 |sort -k1,1n |cut -f2- >> apk/${{ matrix.userName }}-Release.log
       #    fi
       #    echo -e '\n```' >> apk/${{ matrix.userName }}-Release.log
+      - name: Generate Changelog
+        if: ${{ env.commit }}
+        working-directory: TVBoxOSC
+        run: |
+          git log --pretty=format:%B | sed -e "s# \{2,\}#\n#g" -e "/^Merge \(pull\|branch\|remote\)/d" -e '/^$/d' | cat -n | sort -k2,2 -k1,1n | uniq -f1 | sort -k1,1n | cut -f2- > apk/${{ matrix.userName }}-Release.log
+          echo -e "Credit: [${{ matrix.userName }}](${{ env.upStream }})\nCommit: ${{ env.commit }}\nChangelog:\n\`\`\`" > apk/${{ matrix.userName }}-Release.log # 重写文件头
+          echo -e '\n```' >> apk/${{ matrix.userName }}-Release.log # 添加结束标记
       - name: Upload App To Artifact
         uses: actions/upload-artifact@v4
         if: ${{ env.commit }}
